Wed Jan  7 17:14:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb: use installed libraries.  [ruby-core:21006]

	* instruby.rb (gem), lib/rubygems/defaults.rb (Gem.default_dir):
	  use version invariant configuration.

Tue Jan  6 19:09:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_restore_0): streamlined to ensure O(1) time.  based on
	  a patch by Brent Roman <brent AT mbari.org>.

Tue Jan  6 00:34:25 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_close_before_exec): more heuristics to detect maximum fd.

Mon Jan  5 17:59:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (cygwin): needs properly implemented nl_langinfo().
	  [ruby-core:21110]

	* missing/langinfo.c: added as suggested at [ruby-core:21015], from
	  http://www.cl.cam.ac.uk/~mgk25/ucs/langinfo.c.

	* missing/langinfo.c (nl_langinfo_0): fixed typos for SJIS.

Mon Jan  5 17:38:40 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* encoding.c (rb_locale_charmap): use GetConsoleCP() instead of
	  GetACP() because external encoding should be console's one.

	* encoding.c (rb_filesystem_encoding): use GetOEMCP() instead of
	  GetACP() because VFAT/FAT32 uses OEM CP.

Mon Jan  5 16:26:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_filesystem_encoding): use ANSI codepage for file
	  system on cygwin.

	* encoding.c (rb_locale_charmap): reverted.  [ruby-core:21110]

Mon Jan  5 16:15:00 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/curses/curses.c (free_window): use xfree instead of free.
	  [ruby-dev:37200]

Mon Jan  5 15:49:45 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/gdbm/gdbm.c (rb_gdbm_fetch): remove needless cast.

Mon Jan  5 12:52:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (init_env): use user profile folder than personal
	  folder.

Mon Jan  5 08:41:13 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_file_s_stat): need type check for non string values.
	  [ruby-dev:37673]  fix: #964
