@@ -1,3 +1,7 @@
+Wed Jan  7 22:13:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* instruby.rb (man, gem): fixed errors.
+
 Wed Jan  7 17:14:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* instruby.rb: use installed libraries.  [ruby-core:21006]
